# startup_init

./: AGENTS.md  AGENTS_zh.md  BUILD.gn  CODEOWNERS  OAT.xml  README.md  README_zh.md  begetd.gni  bundle.json  ohos.build
ani_interface/: BUILD.gn
ani_interface/deviceinfo/: @ohos.deviceinfo.ets  arktsconfig.json  deviceinfo.ets  deviceinfo_ani.cpp
ani_interface/systemparameter/: @ohos.systemParameterEnhance.ets  arktsconfig.json  systemparameter_ani.cpp  systemparameterenhance.ets
device_info/: BUILD.gn  BUILD.gn.orig  BUILD.gn.rej  IDeviceInfo.idl  device_info.cpp  device_info_kits.cpp  device_info_kits.h  device_info_load.cpp  device_info_load.h  device_info_proxy.cpp  device_info_proxy.h  device_info_service.cpp  device_info_service.h  device_info_stub.cpp  device_info_stub.h  deviceinfoservice_ipc_interface_code.h  idevice_info.h
device_info/etc/: 3902.json  3902.xml  deviceinfoservice.cfg
interfaces/ani/deviceinfo/: BUILD.gn
interfaces/innerkits/: BUILD.gn  libbeget_proxy.versionscript  libbegetutil.versionscript  libsystemparam.versionscript
interfaces/innerkits/begetctl_utils/: begetctl_utils.c
interfaces/innerkits/begetctl_watcher/: begetctl_watcher.c
interfaces/innerkits/control_fd/: BUILD.gn  control_fd.h  control_fd_client.c  control_fd_service.c
interfaces/innerkits/dynamic_service/: BUILD.gn  dynamic_service.c
interfaces/innerkits/fd_holder/: BUILD.gn  fd_holder.c  fd_holder_internal.c  fd_holder_internal.h
interfaces/innerkits/file/: BUILD.gn  init_file.c
interfaces/innerkits/fs_manager/: BUILD.gn  fs_manager_log.c  fstab.c  fstab_mount.c
interfaces/innerkits/hookmgr/: hookmgr.c
interfaces/innerkits/include/: beget_ext.h  begetctl_watcher.h  dynamic_service.h  fd_holder.h  hookmgr.h  init_error.h  init_file.h  init_hashmap.h  init_plugin.h  init_reboot.h  init_reboot_api.h  init_socket.h  init_socket_api.h  init_utils.h  list.h  loop_event.h  modulemgr.h  service_control.h  service_watcher.h  systemcapability.h
interfaces/innerkits/init_module_engine/: BUILD.gn  init_modulemgr.c
interfaces/innerkits/modulemgr/: modulemgr.c
interfaces/innerkits/plugin/: BUILD.gn  init_plugin.c
interfaces/innerkits/reboot/: BUILD.gn  init_reboot.c  init_reboot_api.c  init_reboot_innerkits.c
remount/: BUILD.gn  remount.c  remount_dm_merge.c  remount_overlay.c
remount/include/: remount_overlay.h
services/: BUILD.gn
services/begetctl/: BUILD.gn  appspawntime_cmd.c  begetctl.h  begetctl_cmd.c  bootchart_cmd.c  dump_service.c  init_cmd_reboot.c  main.c  misc_daemon.cpp  modulectl.c  param_cmd.c  partitionslot.cpp  sandbox.cpp  service_control.c  setloglevel.c
services/etc/: BUILD.gn  console.cfg  device.charge.group.cfg  device.charing.group.cfg  group  init.cfg  init.reboot.cfg  init.usb.cfg  init.usb.configfs.cfg  init.without_two_stages.cfg  initProfile  init_prelinker_dso_list  misc.cfg  ohos.para  passwd  plugin_modules.cfg  ueventd.cfg  watchdog.cfg
services/etc_lite/: group  passwd
services/include/: device.h  init_adapter.h  init_capability.h  init_cmds.h  init_hashmap.h  init_import.h  init_jobs.h  init_log.h  init_read_cfg.h  init_reboot.h  init_service.h  init_service_manager.h  init_service_socket.h  init_signal_handler.h  init_utils.h  list.h  switch_root.h
services/init/: bootstagehooker.c  init_capability.c  init_cgroup.c  init_common_cmds.c  init_common_service.c  init_config.c  init_group_manager.c  init_service_file.c  init_service_manager.c  init_service_socket.c  main.c
services/log/: BUILD.gn  init_commlog.c  init_log.c  init_log.h
services/loopevent/: BUILD.gn
services/modules/: BUILD.gn  plugin_adapter.h
services/param/: BUILD.gn
services/plugin/: BUILD.gn  plugin_adapter.h
services/property/: BUILD.gn
services/reboot/: init_cmd_reboot.c
services/sandbox/: BUILD.gn  chipset-sandbox.json  chipset-sandbox64.json  sandbox.c  sandbox_namespace.c  system-sandbox.json  system-sandbox64.json
services/src/: device.c  init_adapter.c  init_capability.c  init_cmds.c  init_import.c  init_jobs.c  init_log.c  init_read_cfg.c  init_reboot.c  init_service.c  init_service_manager.c  init_service_socket.c  init_signal_handler.c  init_utils.c  main.c  uevent.c
services/trigger/: BUILD.gn  trigger_checker.c  trigger_manager.c  trigger_manager.h  trigger_processor.c  trigger_processor.h
services/utils/: BUILD.gn  init_hashmap.c  init_utils.c  init_utils.h  list.c
simulator/: BUILD.gn
test/: BUILD.gn
test/benchmark/: BUILD.gn  benchmark_fwk.cpp  benchmark_fwk.h  parameter_benchmark.cpp
test/exec_test/: BUILD.gn  client.c  fd_holder_test.c  fd_holder_test.cfg  sa_service_ondemand_test.cpp  server.c
test/fuzztest/: BUILD.gn  project.xml
test/moduletest/: BUILD.gn  chipset.init.test.cfg  deviceinfo_moduleTest.cpp  hookmgr_moduletest.cpp  init_test.cfg  modulemgr_moduletest.cpp  param_test_cmds.c  param_test_module.c  plugin_param_test.cfg  plugin_test.h  service_control_test.cpp  service_watcher_moduleTest.cpp  syspara.cpp  syspara_moduleTest.cpp  test_utils.cpp  test_utils.h  vendor.init.test.cfg
test/plugintest/: BUILD.gn  plugin_param_cmd.c  plugin_param_test.c  plugin_test.h
test/systest/: client_systest.c  client_systest.cpp  cmdline_hash_test.c  cmdline_key_test.c  loop_systest.h  loopclient_systest.c  loopserver_systest.c  server_systest.c  server_systest.cpp
test/unittest/: BUILD.gn  init_unittest.h  init_unittest_blocklist.txt
ueventd/: BUILD.gn  list.c  list.h  ueventd.c  ueventd.h  ueventd_device_handler.c  ueventd_device_handler.h  ueventd_firmware_handler.c  ueventd_main.c  ueventd_read_cfg.c  ueventd_read_cfg.h  ueventd_socket.c  ueventd_socket.h  ueventd_utils.c  ueventd_utils.h
ueventd/etc/: ueventd.config  ueventd_l1.config
ueventd/include/: ueventd.h  ueventd_device_handler.h  ueventd_firmware_handler.h  ueventd_parameter.h  ueventd_read_cfg.h  ueventd_socket.h  ueventd_utils.h
ueventd/lite/: ueventd_parameter.c
ueventd/standard/: ueventd_main.c  ueventd_parameter.c
watchdog/: BUILD.gn  init_watchdog.c
watchdog/linux/: BUILD.gn  init_linux_watchdog.c
(+1813 files in other folders)
