# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  enable_ohos_startup_init_feature_watcher = true
  enable_ohos_startup_init_feature_deviceinfo = true

  # only for test
  param_test = true
  param_base_log = false
  enable_ohos_startup_init_feature_ab_partition = false

  # init begetctl support liteos
  enable_ohos_startup_init_feature_begetctl_liteos = false

  # only support mbedtls for hash
  enable_ohos_startup_init_lite_use_thirdparty_mbedtls = true
  enable_ohos_startup_init_lite_use_posix_file_api = false
  config_ohos_startup_init_lite_data_path = "/"

  # config memory size for liteos-m
  config_ohos_startup_init_lite_memory_size = 5120

  startup_init_feature_decode_group_file = false

  startup_init_test_performance = true

  # log display control
  config_ohos_startup_init_lite_no_log = false

  startup_init_with_param_base = false
  if (!use_musl) {
    startup_init_with_param_base = true
    startup_init_feature_decode_group_file = true
  }

  #deps appspawn_client
  enable_appspawn_client_module = true

  # begetutil extension module
  startup_begetutil_extra_modules = ""
  startup_init_extra_static_modules = ""
}
