# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/startup/init/begetd.gni")
if (!defined(ohos_lite)) {
  import("//build/ohos.gni")
  import("//build/ohos/sa_profile/sa_profile.gni")

  ohos_sa_profile("device_info_profile") {
    sources = [ "etc/3902.xml" ]
    part_name = "init"
  }

  ohos_prebuilt_etc("device_info.cfg") {
    source = "etc/deviceinfoservice.cfg"
    relative_install_dir = "init"
    part_name = "init"
    subsystem_name = "startup"
  }

  ohos_shared_library("deviceinfoservice") {
    sources = [
      "//base/startup/init/interfaces/innerkits/syspara/param_comm.c",
      "device_info_stub.cpp",
    ]

    include_dirs = [
      "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include/",
      ".",
      "//base/startup/init/services/include/param",
      "//base/startup/init/interfaces/innerkits/include",
      "//base/startup/init/interfaces/innerkits/include/syspara",
      "//base/startup/init/interfaces/innerkits/syspara",
      "//base/startup/init/interfaces/hals",
    ]
    defines = [
      "INIT_AGENT",
      "_GNU_SOURCE",
      "USE_MBEDTLS",
    ]
    deps = [
      "//base/startup/init/interfaces/innerkits:libbegetutil",
      "//third_party/bounds_checking_function:libsec_shared",
      "//third_party/mbedtls:mbedtls_shared",
    ]

    external_deps = [
      "access_token:libaccesstoken_sdk",
      "c_utils:utils",
      "ipc:ipc_core",
      "safwk:system_ability_fwk",
    ]
    install_images = [ "system" ]
    part_name = "init"
    subsystem_name = "startup"
  }
}

group("device_info_group") {
  if (!defined(ohos_lite) && enable_ohos_startup_init_feature_deviceinfo) {
    deps = [
      ":device_info.cfg",
      ":device_info_profile",
      ":deviceinfoservice",
    ]
  }
}
