# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("sysparam_simulator_public_config") {
  include_dirs = [
    "../interfaces/innerkits/include/syspara",
    "../interfaces/hals",
  ]
}

config("sysparam_simulator_config") {
  cflags = [
    "-Wno-error",
    "-D_INC_STDIO_S",
    "-D_INC_STDLIB_S",
    "-D_INC_MEMORY_S",
    "-D_INC_STRING_S",
    "-D_INC_WCHAR_S",
    "-D_SECTMP=//",
    "-D_STDIO_S_DEFINED",
  ]
  include_dirs = [
    "../../../../commonlibrary/utils_lite/include",
    "./parameter/src",
    "../interfaces/innerkits/include/syspara",
  ]
}

ohos_static_library("sysparam_simulator") {
  public_configs = [ ":sysparam_simulator_public_config" ]
  configs = [ ":sysparam_simulator_config" ]
  sources = [
    "./parameter/src/param_impl_posix/param_impl_posix.c",
    "./parameter/src/parameter_common.c",
  ]
  external_deps = [ "bounds_checking_function:libsec_static" ]
  defines = [
    "INCREMENTAL_VERSION=\"\"",
    "BUILD_TYPE=\"\"",
    "BUILD_USER=\"\"",
    "BUILD_TIME=\"\"",
    "BUILD_HOST=\"\"",
    "BUILD_ROOTHASH=\"\"",
  ]
  part_name = "init"
  subsystem_name = "startup"
}
