# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/startup/init/begetd.gni")

group("testgroup") {
  testonly = true
  if (!defined(ohos_lite)) {
    deps = [
      "exec_test:exectest",
      "fuzztest:fuzztest",
      "moduletest:moduletest",
      "moduletest:paramtestmodule",
      "unittest:init_unittest",
    ]
  } else {
    if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
      deps = [ "unittest/lite:init_test" ]
    }
  }
}
