# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (!defined(ohos_lite)) {
  import("//build/ohos.gni")

  ohos_executable("ueventd") {
    sources = [
      "//base/startup/init_lite/services/src/list.c",
      "//base/startup/init_lite/ueventd/ueventd.c",
      "//base/startup/init_lite/ueventd/ueventd_device_handler.c",
      "//base/startup/init_lite/ueventd/ueventd_firmware_handler.c",
      "//base/startup/init_lite/ueventd/ueventd_read_cfg.c",
      "//base/startup/init_lite/ueventd/ueventd_socket.c",
    ]

    include_dirs = [
      ".",
      "//third_party/bounds_checking_function/include",
      "//base/startup/init_lite/services/log",
      "//base/startup/init_lite/services/include",
      "//base/startup/init_lite/services/utils",
    ]

    deps = [
      "//base/startup/init_lite/services/log:init_log",
      "//base/startup/init_lite/services/utils:libinit_utils",
      "//third_party/bounds_checking_function:libsec_static",
    ]

    install_images = [
      "system",
      "updater",
    ]
    install_enable = true
    part_name = "init"
  }

  ohos_prebuilt_etc("ueventd.config") {
    source = "//base/startup/init_lite/ueventd/etc/ueventd.config"
    part_name = "init"
    install_images = [
      "system",
      "updater",
    ]
  }
}
